headers/Horde3D.h

# define horde3d "libHorde3D.so"
typedef int H3DRes;
typedef int H3DNode;
enum H3DOptions {
		MaxLogLevel = 1,
		MaxNumMessages,
		TrilinearFiltering,
		MaxAnisotropy,
		TexCompression,
		SRGBLinearization,
		LoadTextures,
		FastAnimation,
		ShadowMapSize,
		SampleCount,
		WireframeMode,
		DebugViewMode,
		DumpFailedShaders,
		GatherTimeStats
};
enum H3DStats
{
		TriCount = 100,
		BatchCount,
		LightPassCount,
		FrameTime,
		AnimationTime,
		GeoUpdateTime,
		ParticleSimTime,
		FwdLightsGPUTime,
		DefLightsGPUTime,
		ShadowsGPUTime,
		ParticleGPUTime,
		TextureVMem,
		GeometryVMem
};
enum H3DResTypes
{
		Undefined = 0,
		SceneGraph,
		Geometry,
		Animation,
		Material,
		Code,
		Shader,
		Texture,
		ParticleEffect,
		Pipeline
};
enum H3DResFlags
{
		NoQuery = 1,
		NoTexCompression = 2,
		NoTexMipmaps = 4,
		TexCubemap = 8,
		TexDynamic = 16,
		TexRenderable = 32,
		TexSRGB = 64
};
enum H3DFormats
{
		Unknown = 0,
		TEX_BGRA8,
		TEX_DXT1,
		TEX_DXT3,
		TEX_DXT5,
		TEX_RGBA16F,
		TEX_RGBA32F
};
enum H3DGeoRes
{
		GeometryElem = 200,
		GeoIndexCountI,
		GeoVertexCountI,
		GeoIndices16I,
		GeoIndexStream,
		GeoVertPosStream,
		GeoVertTanStream,
		GeoVertStaticStream
};
enum H3DAnimRes
{
		EntityElem = 300,
		EntFrameCountI
};
enum H3DMatRes
{
		MaterialElem = 400,
		SamplerElem,
		UniformElem,
		MatClassStr,
		MatLinkI,
		MatShaderI,
		SampNameStr,
		SampTexResI,
		UnifNameStr,
		UnifValueF4
};
enum H3DShaderRes
{
		ContextElem = 600,
		SamplerElem,
		UniformElem,
		ContNameStr,
		SampNameStr,
		SampDefTexResI,
		UnifNameStr,
		UnifSizeI,
		UnifDefValueF4
};
enum H3DTexRes
{
		TextureElem = 700,
		ImageElem,
		TexFormatI,
		TexSliceCountI,
		ImgWidthI,
		ImgHeightI,
		ImgPixelStream,
		TexNativeRefI
};
enum H3DPartEffRes
{
		ParticleElem = 800,
		ChanMoveVelElem,
		ChanRotVelElem,
		ChanSizeElem,
		ChanColRElem,
		ChanColGElem,
		ChanColBElem,
		ChanColAElem,
		PartLifeMinF,
		PartLifeMaxF,
		ChanStartMinF,
		ChanStartMaxF,
		ChanEndRateF,
		ChanDragElem
};
enum H3DPipeRes
{
		StageElem = 900,
		StageNameStr,
		StageActivationI
};
enum H3DNodeTypes
{
		Undefined = 0,
		Group,
		Model,
		Mesh,
		Joint,
		Light,
		Camera,
		Emitter
};
enum H3DNodeFlags
{
		NoDraw = 1,
		NoCastShadow = 2,
		NoRayQuery = 4,
		Inactive = 7  
};
enum H3DNodeParams
{
		NameStr = 1,
		AttachmentStr
};
enum H3DModel
{
		GeoResI = 200,
		SWSkinningI,
		LodDist1F,
		LodDist2F,
		LodDist3F,
		LodDist4F,
		AnimCountI
};
enum H3DMesh
{
		MatResI = 300,
		BatchStartI,
		BatchCountI,
		VertRStartI,
		VertREndI,
		LodLevelI
};
enum H3DJoint
{
		JointIndexI = 400
};
enum H3DLight
{
		MatResI = 500,
		RadiusF,
		FovF,
		ColorF3,
		ColorMultiplierF,
		ShadowMapCountI,
		ShadowSplitLambdaF,
		ShadowMapBiasF,
		LightingContextStr,
		ShadowContextStr
};
enum H3DCamera
{
		PipeResI = 600,
		OutTexResI,
		OutBufIndexI,
		LeftPlaneF,
		RightPlaneF,
		BottomPlaneF,
		TopPlaneF,
		NearPlaneF,
		FarPlaneF,
		ViewportXI,
		ViewportYI,
		ViewportWidthI,
		ViewportHeightI,
		OrthoI,
		OccCullingI
};
enum H3DEmitter
{
		MatResI = 700,
		PartEffResI,
		MaxCountI,
		RespawnCountI,
		DelayF,
		EmissionRateF,
		SpreadAngleF,
		ForceF3
};
enum H3DModelUpdateFlags
{
		Animation = 1,
		Geometry = 2
};
const char *h3dGetVersionString();
bool h3dCheckExtension( const char *extensionName );
bool h3dGetError();
bool h3dInit();
void h3dRelease();
void h3dRender( H3DNode cameraNode );
void h3dFinalizeFrame();
void h3dClear();
const char *h3dGetMessage( int *level, float *time );
float h3dGetOption( H3DOptions param );
bool h3dSetOption( H3DOptions param, float value );
float h3dGetStat( H3DStats param, bool reset );
void h3dShowOverlays( const float *verts, int vertCount, float colR, float colG, float colB,
                          float colA, H3DRes materialRes, int flags );
void h3dClearOverlays();
int h3dGetResType( H3DRes res );
const char *h3dGetResName( H3DRes res );
H3DRes h3dGetNextResource( int type, H3DRes start );
H3DRes h3dFindResource( int type, const char *name );
H3DRes h3dAddResource( int type, const char *name, int flags );
H3DRes h3dCloneResource( H3DRes sourceRes, const char *name );
int h3dRemoveResource( H3DRes res );
bool h3dIsResLoaded( H3DRes res );
bool h3dLoadResource( H3DRes res, const char *data, int size );
void h3dUnloadResource( H3DRes res );
int h3dGetResElemCount( H3DRes res, int elem );
int h3dFindResElem( H3DRes res, int elem, int param, const char *value );
int h3dGetResParamI( H3DRes res, int elem, int elemIdx, int param );
void h3dSetResParamI( H3DRes res, int elem, int elemIdx, int param, int value );
float h3dGetResParamF( H3DRes res, int elem, int elemIdx, int param, int compIdx );
void h3dSetResParamF( H3DRes res, int elem, int elemIdx, int param, int compIdx, float value );
const char *h3dGetResParamStr( H3DRes res, int elem, int elemIdx, int param );
void h3dSetResParamStr( H3DRes res, int elem, int elemIdx, int param, const char *value );
void *h3dMapResStream( H3DRes res, int elem, int elemIdx, int stream, bool read, bool write );
void h3dUnmapResStream( H3DRes res );
H3DRes h3dQueryUnloadedResource( int index );
void h3dReleaseUnusedResources();
H3DRes h3dCreateTexture( const char *name, int width, int height, int fmt, int flags );
void h3dSetShaderPreambles( const char *vertPreamble, const char *fragPreamble );
bool h3dSetMaterialUniform( H3DRes materialRes, const char *name, float a, float b, float c, float d );
void h3dResizePipelineBuffers( H3DRes pipeRes, int width, int height );
bool h3dGetRenderTargetData( H3DRes pipelineRes, const char *targetName, int bufIndex,
                                 int *width, int *height, int *compCount, void *dataBuffer, int bufferSize );
int h3dGetNodeType( H3DNode node );
H3DNode h3dGetNodeParent( H3DNode node );
bool h3dSetNodeParent( H3DNode node, H3DNode parent );
H3DNode h3dGetNodeChild( H3DNode node, int index );
H3DNode h3dAddNodes( H3DNode parent, H3DRes sceneGraphRes );
void h3dRemoveNode( H3DNode node );
bool h3dCheckNodeTransFlag( H3DNode node, bool reset );
void h3dGetNodeTransform( H3DNode node, float *tx, float *ty, float *tz,
                              float *rx, float *ry, float *rz, float *sx, float *sy, float *sz );
void h3dSetNodeTransform( H3DNode node, float tx, float ty, float tz,
                              float rx, float ry, float rz, float sx, float sy, float sz );
void h3dGetNodeTransMats( H3DNode node, const float **relMat, const float **absMat );
void h3dSetNodeTransMat( H3DNode node, const float *mat4x4 );
int h3dGetNodeParamI( H3DNode node, int param );
void h3dSetNodeParamI( H3DNode node, int param, int value );
float h3dGetNodeParamF( H3DNode node, int param, int compIdx );
void h3dSetNodeParamF( H3DNode node, int param, int compIdx, float value );
const char *h3dGetNodeParamStr( H3DNode node, int param );
void h3dSetNodeParamStr( H3DNode node, int param, const char *value );